--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://host.docker.internal:3307/tacos
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3307/tacos
+spring.datasource.url=jdbc:mysql://localhost:3306/tacos
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
