--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,11 +18,12 @@ jobs:
       - name: Start containers
         run: docker-compose -f "docker-compose.yml" up -d --build
       
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+      # - name: Set up JDK 17
+      #   uses: actions/setup-java@v2
+      #   with:
+      #     java-version: '17'
+      #     distribution: 'temurin'
+      #     cache: maven
+          
       - name: Build with Maven
-        run: mvn clean install
+        run: sudo mvn clean install
