--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://host.docker.internal:3307/tacos
+spring.datasource.url=jdbc:mysql://mysqldb2:3307/tacos
 #spring.datasource.url=jdbc:mysql://localhost:3306/tacos
 spring.datasource.username=root
 spring.datasource.password=1234
