--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start containers
-        run: docker-compose -f "docker-compose.yml" up -d --build
+        run: docker-compose up --build -d
       
       # - name: Set up JDK 17
       #   uses: actions/setup-java@v2
@@ -27,3 +27,6 @@ jobs:
           
       - name: Build with Maven
         run: sudo mvn clean install
+
+      - name: Stop and Remove Containers
+        run: docker-compose down
