--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,8 +15,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Start containers
-        run: docker-compose up --build -d
+      - name: Start containers 
+        run: |
+          docker-compose up --build -d
+          sudo mvn clean install
       
       # - name: Set up JDK 17
       #   uses: actions/setup-java@v2
