--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,9 +16,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start containers 
-        run: |
-          docker-compose up --build -d
-          sudo mvn clean install
+        run: docker-compose up --build -d
+
+      - name: Build Spring Boot App
+        run: docker-compose exec -T spring-app ./mvnw clean install
+          
       
       # - name: Set up JDK 17
       #   uses: actions/setup-java@v2
@@ -27,8 +29,6 @@ jobs:
       #     distribution: 'temurin'
       #     cache: maven
           
-      - name: Build with Maven
-        run: sudo mvn clean install
 
       - name: Stop and Remove Containers
         run: docker-compose down
