--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,7 @@ jobs:
         run: docker-compose up --build -d
 
       - name: Build Spring Boot App
-        run: docker-compose exec -T spring-app ./mvn clean install
+        run: docker-compose exec -T spring-app mvn clean install
           
       
       
